--- a/backstage-jenkins.yaml
+++ b/backstage-jenkins.yaml
@@ -4,6 +4,7 @@ metadata:
   name: 'pipeline'
   description: 'a description'
   annotations:
+    jenkins.io/job-full-name: 'backstage/backstage/master'
     jenkins.io/job-full-name: 'backstage/backstage/main'
 spec:
   type: service
